[gd_scene load_steps=7 format=3 uid="uid://ipscaqabriwe"]

[ext_resource type="Script" path="res://scenes/grid.gd" id="1_42ppi"]
[ext_resource type="Texture2D" uid="uid://drp4ge6v2l5uv" path="res://icon.svg" id="1_tntsb"]
[ext_resource type="Script" path="res://scenes/Point1.gd" id="3_uskx1"]
[ext_resource type="Script" path="res://scenes/Point2.gd" id="4_ltwip"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_djerg"]
size = Vector2(26, 25.6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hj2oq"]
size = Vector2(128, 130)

[node name="Grid" type="Area2D"]
script = ExtResource("1_42ppi")

[node name="GridSprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_tntsb")

[node name="Point1" type="Area2D" parent="."]
position = Vector2(-119, -119)
scale = Vector2(0.5, 0.5)
script = ExtResource("3_uskx1")

[node name="PointSprite1" type="Sprite2D" parent="Point1"]
texture = ExtResource("1_tntsb")

[node name="Coll1" type="CollisionShape2D" parent="Point1"]
position = Vector2(-1, 0)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_djerg")

[node name="Point2" type="Area2D" parent="."]
position = Vector2(0, -119)
scale = Vector2(0.5, 0.5)
script = ExtResource("4_ltwip")

[node name="PointSprite2" type="Sprite2D" parent="Point2"]
texture = ExtResource("1_tntsb")

[node name="Coll2" type="CollisionShape2D" parent="Point2"]
position = Vector2(2, 1)
shape = SubResource("RectangleShape2D_hj2oq")

[connection signal="mouse_entered" from="Point1" to="." method="_on_point_1_mouse_entered"]
[connection signal="mouse_entered" from="Point1" to="Point1" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="Point2" to="." method="_on_point_2_mouse_entered"]
[connection signal="mouse_entered" from="Point2" to="Point2" method="_on_mouse_entered"]
